# winbox-stats

./: .gitignore  Cargo.toml  README.md  buildx.ps1  run_for_3_hours.ps1
src/: cli.rs  collect.rs  export_json.rs  main.rs
src/graph/: mod.rs  plot.rs
