[package]
name = "winbox-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
walkdir = "2.5"
plotters = "0.3"

# Cargo.toml
[profile.release]
incremental = true           # reuse previous codegen
codegen-units = 256          # faster compile, slightly slower runtime
lto = "thin"                 # faster link than full LTO
debug = 1                    # small debug info can speed links on Windows
